added styles + first project

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <header class="page-header">
     <div class="container">
-      <a href="https://vk.com/rmnut">VK</a><br>
-      <a href="https://www.instagram.com/roman.ft/">Instagram</a>
+      <a class="header-email" href="mailto:romanutwork@mail.ru">romanutwork@mail.ru</a>
+      <a class="header-phone" href="tel:+79777558389">+7 977 755 83 89</a>
     </div>
   </header>
 
@@ -28,6 +28,9 @@
   <section class="intro">
     <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure>
+        <img src="files/user.jpg" height=100% alt="Фотография Утимишева Романа">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Начинаю свой путь Front-End разработчика</p>
       <h3>Чем могу быть полезен</h3>
@@ -38,15 +41,19 @@
   <section class="portfolio">
     <div class="container">
       <h2 class="subheading">Мои работы</h2>
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+      <h3>Первый сайт</h3>
+      <p>Автоматизация дома</p>
+      <figure class="project-image">
+        <img src="files/project.png" width=100% alt="Cайт Утимишева Романа">
+      </figure>
+      <a class="button" href="source/smarthome/index.html" target="_blank">Открыть страницу</a>
     </div>
   </section>
 
   <footer class="page-footer">
     <div class="container">
-      <a href="https://vk.com/rmnut">VK</a>
-      <a href="https://www.instagram.com/roman.ft/">Instagram</a>
+      <a class="footer-email" href="mailto:romanutwork@mail.ru">romanutwork@mail.ru</a>
+      <a class="footer-phone" href="tel:+79777558389">+7 977 755 83 89</a>
     </div>
   </footer>
 </body>
