verstal into dev

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="hero-image">
     <div class="container">
       <h1 class="heading">Утимишев Роман</h1>
-      <p>Junior верстальщик</p>
+      <p>Junior Front-End Developer</p>
     </div>
   </section>
 
