Added video-page, updated index.html

--- a/source/simplelayout/index.html
+++ b/source/simplelayout/index.html
@@ -35,7 +35,9 @@
                         quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo
                         debitis dolor.</p>
                 </div>
-                <img class="about-photo" src="img/about-img-placeholder.png" alt="placeholder" height="245" width="430">
+                <video class="about-video"
+                    src="https://storage.coverr.co/videos/IVBW7jVjkQhNeznVYPnH9uD9Wj3Pyt17?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTkwMTcyNjY5fQ.1kjgP-D14QO1sowdor9oXyzMshES9OUnqmx6vVM0d54"
+                    alt="placeholder" height="245" width="430" controls>
             </section>
             <section class="dignity">
                 <h2 class="dignity-title">Dignity and pluses product</h2>
@@ -174,7 +176,7 @@
                             <li>Cum odio, iste quia doloribus autem;</li>
                             <li>Aperiam nulla ea neque.</li>
                         </ol>
-                        <button class="cards-button">BUY</button>
+                        <button class="cards-button">buy</button>
                     </div>
                     <div class="cards-premium">
                         <h3 class="cards-standart-title">Premium</h3>
@@ -189,7 +191,7 @@
                             <li>Lorem ipsum dolor sit amet consect;</li>
                             <li>Lorem ipsum dolor sit.</li>
                         </ol>
-                        <button class="cards-button">BUY</button>
+                        <button class="cards-button">buy</button>
                     </div>
                     <div class="cards-lux">
                         <h3 class="cards-standart-title">Lux</h3>
@@ -208,7 +210,7 @@
                             <li>Lorem ipsum dolor sit.</li>
                             <li>Lorem ipsum dolor sit.</li>
                         </ol>
-                        <button class="cards-button">BUY</button>
+                        <button class="cards-button">buy</button>
                     </div>
                 </div>
             </section>
@@ -220,13 +222,14 @@
                     <input class="input-form textemail" type="text" placeholder="Your name:">
                     <input class="input-form textemail" type="email" placeholder="Your email:">
                     <textarea rows="9" class="input-textarea" placeholder="Your message:"></textarea>
-                    <input class="input-button" type="submit" value="SEND">
+                    <input class="input-button" type="submit" value="send">
                 </form>
                 <ul class="footer-info-list">
                     <li class="footer-info-item skype">here_your_login_skype</li>
                     <li class="footer-info-item icq">279679659</li>
                     <li class="footer-info-item mail">psdhtmlcss@mail.ru</li>
                     <li class="footer-info-item phone">80 00 4568 55 55</li>
+                    <li class="footer-info-item"><a href="videosite/index.html"></a></li>
                 </ul>
             </div>
             <p class="copyright">Copyright &copy; 2014 Product name · PSD HTML CSS</p>
